WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112284
Also don't log error messages from the GraphicsContext3D if webGLErrorsToConsoleEnabled is false
https://bugs.webkit.org/show_bug.cgi?id=112284
Summary
Also don't log error messages from the GraphicsContext3D if webGLErrorsToCons...
jochen
Reported
2013-03-13 13:19:46 PDT
Also don't log error messages from the GraphicsContext3D if webGLErrorsToConsoleEnabled is false
Attachments
Patch
(1.94 KB, patch)
2013-03-13 13:20 PDT
,
jochen
no flags
Details
Formatted Diff
Diff
Patch
(1.94 KB, patch)
2013-03-13 13:42 PDT
,
jochen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
jochen
Comment 1
2013-03-13 13:20:59 PDT
Created
attachment 192982
[details]
Patch
Adam Barth
Comment 2
2013-03-13 13:38:28 PDT
Comment on
attachment 192982
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=192982&action=review
> Source/WebCore/ChangeLog:9 > + Since webGLErrorsToConsoleEnabled is false durin layout tests, this change makes
durin -> during
> Source/WebCore/html/canvas/WebGLRenderingContext.cpp:399 > + if (m_context->m_synthesizedErrorsToConsole) > + m_context->printGLErrorToConsole(message);
Why isn't this needed in DRT? Perhaps the filtering is supposed to happen at another layer?
jochen
Comment 3
2013-03-13 13:42:45 PDT
Created
attachment 192986
[details]
Patch
jochen
Comment 4
2013-03-13 13:53:42 PDT
(In reply to
comment #2
)
> (From update of
attachment 192982
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=192982&action=review
> > > Source/WebCore/ChangeLog:9 > > + Since webGLErrorsToConsoleEnabled is false durin layout tests, this change makes > > durin -> during > > > Source/WebCore/html/canvas/WebGLRenderingContext.cpp:399 > > + if (m_context->m_synthesizedErrorsToConsole) > > + m_context->printGLErrorToConsole(message); > > Why isn't this needed in DRT? Perhaps the filtering is supposed to happen at another layer?
For DRT, we use WebGraphicsContext3DInProcessImpl which doesn't implement WebGraphicsContext3D::setErrorMessageCallback() If we instead not invoke the error message callback in the out-of-process version used in content shell, the error messages also won't show up in the regular log which might make debugging of real errors in the future more difficult.
Adam Barth
Comment 5
2013-03-13 14:49:13 PDT
Comment on
attachment 192986
[details]
Patch ok
WebKit Review Bot
Comment 6
2013-03-13 15:26:23 PDT
Comment on
attachment 192986
[details]
Patch Clearing flags on attachment: 192986 Committed
r145761
: <
http://trac.webkit.org/changeset/145761
>
WebKit Review Bot
Comment 7
2013-03-13 15:26:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug