Also don't log error messages from the GraphicsContext3D if webGLErrorsToConsoleEnabled is false https://bugs.webkit.org/show_bug.cgi?id=112284

Reviewed by Adam Barth.

When running layout tests in content_shell, we end up logging more information.
Since webGLErrorsToConsoleEnabled is false during layout tests, this change makes
sure we match the baselines.

* html/canvas/WebGLRenderingContext.cpp:
(WebCore):
(WebCore::WebGLRenderingContextErrorMessageCallback::onErrorMessage):


Canonical link: https://commits.webkit.org/130610@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145761 268f45cc-cd09-0410-ab3c-d52691b4dbfc